--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 	font-size: 100%;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: normal;
+	box-sizing: border-box;
 	border: none;
 	outline: none;
 }
@@ -32,3 +33,39 @@ p {
 }
 
 /* CABEÇALHO */
+
+.cabecalho {
+	width: 100%;
+	float: left;
+	padding: 50px 8%; /* Podemos utilizar px e % em uma mesma propriedade */
+	background-color: #13c7ae;
+}
+
+.cabecalho .logo a {
+	font-size: 0;
+	width: 221px;
+	height: 48px;
+	float: left;
+	background-image: url(../img/logo.png);
+	background-repeat: no-repeat;
+}
+
+.cabecalho form {
+	width: 30%;
+	float: right;
+}
+
+.cabecalho form input {
+	width: 85%;
+	float: left;
+	padding: 15px 10px;
+}
+
+.cabecalho form button {
+	width: 15%;
+	float: right;
+	padding: 15px 10px;
+	background-color: #0cae98;
+	color: #fff;
+	cursor: pointer;
+}
