--- a/css/style.css
+++ b/css/style.css
@@ -67,5 +67,26 @@ p {
 	padding: 15px 10px;
 	background-color: #0cae98;
 	color: #fff;
-	cursor: pointer;
+}
+
+/* MENU */
+
+.menu {
+	width: 100%;
+	float: left;
+	background-color: #111;
+	padding: 18px 8%;
+}
+
+.menu li {
+	float: left;
+}
+
+.menu li a {
+	color: #9d9d9d;
+	margin-right: 25px;
+}
+
+.menu li a:hover {
+	color: #fff;
 }
