--- a/css/style.css
+++ b/css/style.css
@@ -148,3 +148,30 @@ button, a {
 .principal .sobre p {
 	text-align: justify;
 }
+
+.principal .onde-estamos {
+	width: 30%;
+	float: right;
+	padding: 10px 20px;
+	background-color: #f5f5f5;
+	border-radius: 5px;
+}
+
+.principal .onde-estamos iframe {
+	width: 100%;
+	height: 250px;
+	margin: 20px 0 20px 0;
+}
+
+.principal .onde-estamos h2 {
+	margin-bottom: 5px;
+}
+
+.principal .onde-estamos i {
+	margin-right: 5px;
+}
+
+.principal .onde-estamos li {
+	color: #777;
+	margin-bottom: 7px;
+}
