--- a/css/style.css
+++ b/css/style.css
@@ -175,3 +175,61 @@ button, a {
 	color: #777;
 	margin-bottom: 7px;
 }
+
+/* NEWSLETTER */
+.newsletter {
+	width: 100%;
+	float: left;
+	background-color: #111;
+	padding: 50px 8%;
+}
+
+.newsletter h3 {
+	font-size: 1.8em;
+	color: #fff;
+}
+
+.newsletter p {
+	text-indent: 0;
+	font-size: 1.2em;
+	color: #fff;
+}
+
+.newsletter form {
+	width: 100%;
+	float: left;
+	margin-top: 10px;
+}
+
+.newsletter form input {
+	width: 40%;
+	margin-right: 1%;
+	padding: 15px 10px;
+	border: solid 1px #fff;
+	border-radius: 5px;
+	color: #fff;
+	float: left;
+	background-color: initial; /* Tira a cor de fundo padrão do input */
+}
+
+.newsletter form button {
+	width: 18%;
+	background-color: #fff;
+	padding: 15px 10px;
+	border-radius: 5px;
+	float: right;
+}
+
+/* RODAPÉ */
+
+.rodape {
+	width: 100%;
+	float: left;
+	background-color: #13c7ae;
+	padding: 20px 8%;
+	text-align: center;
+}
+
+.rodape p {
+	color: #fff;
+}
